# Opswarm

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/: __init__.py
agents/commander/: agent.py
agents/correlator/: agent.py
agents/investigator/: agent.py
agents/sentry/: __init__.py  agent.py
api/: __init__.py  main.py
api/routers/: __init__.py  health.py  incidents.py
configs/: development.yaml
core/: __init__.py  config.py  constants.py  database_models.py  exceptions.py  logging_config.py  state_schema.py
data/incidents/: INC-001_brute_force_attack.json  INC-002_db_pool_exhausted.json  INC-003_payment_cascade.json  INC-004_memory_leak.json  INC-005_deployment_regression.json
data/runbooks/: auth_incident_runbook.md  db_incident_runbook.md  infra_incident_runbook.md  payment_incident_runbook.md
docs/: aws_resources.md
infra/docker/postgres/: init.sql
rag/: __init__.py  embeddings.py  vector_store.py
scripts/: ingest_real_logs.py  setup_env.py  simulate_incidents.py  test_swarm.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_constants.py  test_state_schema.py
